fix js path error of draggable popup

--- a/demo/draggable-popup/index.html
+++ b/demo/draggable-popup/index.html
@@ -9,7 +9,7 @@
 	<!-- import Leaflet -->
 	<link href="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.css" rel="stylesheet">
 	<script src="https://cdn.bootcdn.net/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
-	<script src="./src/DraggablePopup.js"></script>
+	<script src="./js/DraggablePopup.js"></script>
 <head>
 <body onload="loadMap()">
 	<div id="map" style="width:800px;height:400px;background-color:#ffffff;"></div>
